--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,5 @@ RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
 
 #RewriteRule ^(.+)/(.+)/$ index.php?var1=$1&var2=$2
-RewriteRule ^(.+)$ index.php?var1=$1 [QSA,L]
+RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 RewriteRule ^blog/(.*)$ blog/?p=var1
